# research-computing-with-cpp-demo

./: CMakeLists.txt  reportDraft.txt
Code/: CMakeLists.txt
Code/ICP/: CMakeLists.txt  ExceptionIcp.cpp  ExceptionIcp.h  ICPRegistration.cpp  ICPregistration.h  PointCloud.cpp  PointCloud.h  defs.h  main.cpp  main_PointBasedReg.cpp  main_SurfaceBasedReg.cpp  utils.cpp  utils.h
Documentation/: reportCW1_rccp.aux  reportCW1_rccp.tex
Testing/ICP/: CMakeLists.txt  PointBasedTests.cc  SurfaceBasedTests.cc  main_Tests.cc
Testing/PointBasedRegistrationData/: fixed.txt  matrix4x4.txt  moving.txt  outputTest.txt
Testing/SurfaceBasedRegistrationData/: fran_cut.txt  fran_cut_transformed.txt  matrix4x4.txt  outputTest.txt  testRead.txt  testRead_transformed.txt
